# problemy-synchronizacyjne

./: .gitignore  CMakeLists.txt  README.md  composerPath  couscous.yml  default.twig  hts-log.txt  index.html  path  readme-demo.html  readme1.html
doc/: dining-philosophers-resourceh-code.html  dining-philosophers-resourceh-code.md  dining-philosophers-waiter-code.html  dining-philosophers-waiter-code.md  dining-philosophers.html  dining-philosophers.md  producers-consumers-source.html  producers-consumers-source.md  producers-consumers.html  producers-consumers.md  readers-writers-rwp1.html  readers-writers-rwp1.md  readers-writers-rwp2.html  readers-writers-rwp2.md  readers-writers-rwp3.html  readers-writers-rwp3.md  readers-writers.html  readers-writers.md  readme1.html
hts-cache/: new.lst  new.txt
src/dining-philosophers/: CMakeLists.txt  Makefile  dining-philosophers-resource-hierarchy  dining-philosophers-resource-hierarchy.c  dining-philosophers-waiter  dining-philosophers-waiter.c  error.h
src/producers-consumers/: CMakeLists.txt  Makefile  producers-consumers  producers-consumers.c
src/readers-writers/: Makefile  common.c  common.h  error.c  rwp1_mutex  rwp1_mutex.c  rwp1_semaphore  rwp1_semaphore.c  rwp2_mutex  rwp2_mutex.c  rwp2_semaphore  rwp2_semaphore.c  rwp3_mutex  rwp3_mutex.c  rwp3_semaphore  rwp3_semaphore.c
